--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,75 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+.App{
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
+button{
+  border-radius: 5px;
+}
+.calc{
+  width: 500px;
+  height: 800px;
+  background-color: black;
+  color: white;
+  padding: 10px;
+  border-radius: 10px;
+}
+.empt{
+  /* background-color: red; */
+  width: 100%;
+  height: 200px;
+  margin-top: 100px;
+  text-align: right;
+  font-size: 150px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding-right: 15px;
+}
+.nums{
+  display: inline-block;
+  width: 70%;
+  margin-top: 10px;
+}
+.procs{
+  width: 30%;
+  height: 80px;
+  margin: 5px;
+  font-size: 32px;
+  background-color: grey;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+.number{
+  width: 30%;
+  height: 80px;
+  margin: 5px;
+  font-size: 32px;
+  background-color: #222;
+  color: white;
+}
+.oper{
+  display: inline-block;
+  width: 29.9%;
+
+}
+.operations{
+  width: 80%;
+  height: 80px;
+  margin: 5px;
+  margin-left: 20px;
+  font-size: 32px;
+  background-color: orange;
+  color: white;
+}
+.equal{
+  width: 80%;
+  height: 80px;
+  margin: 5px;
+  margin-left: 20px;
+  font-size: 32px;
+  background-color: orange;
+  color: white;
+
 }
